Fix usernames being too long

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -851,6 +851,7 @@ a:focus {
     font-weight: bold;
     margin-left: 8px;
     margin-top: 5px;
+    max-width: 135px;
 }
 
 #phase-content #content-people #people-list .people-section .people-section-list ul li .people-username-creator {
